<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Wealth Tracker</string>
    <string name="assets">ASSETS</string>
    <string name="checking_accounts">Checking accounts</string>
    <string name="savings_accounts">Savings accounts</string>
    <string name="money_market_accounts">Money market accounts</string>
    <string name="savings_bonds">Savings bonds</string>
    <string name="cd">CDS</string>
    <string name="cash_value_of_life_insurance">Cash value of life insurance</string>
    <string name="cash_and_cash_equivalents">Cash and Cash Equivalents</string>
    <string name="dollar">"$  "</string>
    <string name="total_cash">Total Cash</string>
    <string name="invested_assets">Invested Assets</string>
    <string name="taxable_accounts">Taxable accounts</string>
    <string name="brokerage">Brokerage</string>
    <string name="other">Other:______</string>
    <string name="total_invested_assets">Total Invested Assets</string>
    <string name="total_assets">Total Assets: $%.2f</string>
    <string name="update">Update</string>
    <string name="save">Save</string>
    <string name="retirement_accounts">Retirement accounts</string>
    <string name="ira">IRA</string>
    <string name="roth_ira">Roth IRA</string>
    <string name="_401_k_or_403_b">401(k) or 403(b)</string>
    <string name="sep_ira">SEP-IRA</string>
    <string name="keogh_or_other_qualified_plan">Keogh or other qualified plan</string>
    <string name="pension_vested_benefit">Pension (vested benefit)</string>
    <string name="annuity_accumulated_value">Annuity (accumulated value)</string>
    <string name="limited_liability_company">Limited liability company</string>
    <string name="s_corporation">S Corporation</string>
    <string name="c_corporation">C Corporation</string>
    <string name="partnership">Partnership</string>
    <string name="sole_proprietorship">Sole proprietorship</string>
    <string name="real_estate">Real estate</string>
    <string name="business_ownership_interests">Business ownership interests</string>
    <string name="use_assets">Use Assets</string>
    <string name="principal_home">Principal home</string>
    <string name="vacation_home">Vacation home</string>
    <string name="cars_trucks_boats">Cars, trucks, boats</string>
    <string name="home_furnishings">Home furnishings</string>
    <string name="art_antiques_coins_collectibles">Art, antiques, coins, collectibles</string>
    <string name="jewelry_furs">Jewelry, furs</string>
    <string name="total_use_assets">Total Use Assets</string>
    <string name="liabilities">LIABILITIES</string>
    <string name="total_liabilities">Total Liabilities: $%.2f</string>
    <string name="current">Current</string>
    <string name="credit_card_balances">Credit card balances</string>
    <string name="estimated_income_tax_owed">Estimated income tax owed</string>
    <string name="other_outstanding_bills">Other outstanding bills</string>
    <string name="long_term">Long-Term</string>
    <string name="home_mortgage">Home mortgage</string>
    <string name="home_equity_loan">Home equity loan</string>
    <string name="mortgages_on_rental_properties">Mortgages on rental properties</string>
    <string name="car_loans">Car loans</string>
    <string name="student_loans">Student loans</string>
    <string name="life_insurance_policy_loans">Life insurance policy loans</string>
    <string name="other_long_term_debt">Other long-term debt</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">HOME</string>
    <string name="summary">SUMMARY</string>
    <string name="history">HISTORY</string>
    <string name="reset">Reset</string>
</resources>