<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/use_assets_table"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:layout_marginBottom="10dp">
    <TableRow
        android:background="@color/rowColor"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:textStyle="bold"
            android:text="@string/use_assets"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/rowColor"
        android:layout_marginVertical="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/Indent1"
            android:text="@string/principal_home"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dollar" />
        <EditText
            android:id="@+id/principal_home"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:background="@color/textboxColor"
            android:autofillHints=""/>
    </TableRow>
    <TableRow
        android:background="@color/rowColor"
        android:layout_marginVertical="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/Indent1"
            android:text="@string/vacation_home"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dollar" />
        <EditText
            android:id="@+id/vacation_home"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:background="@color/textboxColor"
            android:autofillHints=""/>
    </TableRow>
    <TableRow
        android:background="@color/rowColor"
        android:layout_marginVertical="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/Indent1"
            android:text="@string/cars_trucks_boats"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dollar" />
        <EditText
            android:id="@+id/cars_trucks_boats"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:background="@color/textboxColor"
            android:autofillHints=""/>
    </TableRow>
    <TableRow
        android:background="@color/rowColor"
        android:layout_marginVertical="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/Indent1"
            android:text="@string/home_furnishings"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dollar" />
        <EditText
            android:id="@+id/home_furnishings"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:background="@color/textboxColor"
            android:autofillHints=""/>
    </TableRow>
    <TableRow
        android:background="@color/rowColor"
        android:layout_marginVertical="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/Indent1"
            android:text="@string/art_antiques_coins_collectibles"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dollar" />
        <EditText
            android:id="@+id/art_antiques_coins_collectibles"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:background="@color/textboxColor"
            android:autofillHints=""/>
    </TableRow>
    <TableRow
        android:background="@color/rowColor"
        android:layout_marginVertical="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/Indent1"
            android:text="@string/jewelry_furs"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dollar" />
        <EditText
            android:id="@+id/jewelry_furs"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:background="@color/textboxColor"
            android:autofillHints=""/>
    </TableRow>
    <TableRow
        android:background="@color/rowColor"
        android:layout_marginVertical="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/Indent1"
            android:text="@string/other"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dollar" />
        <EditText
            android:id="@+id/other_use_assets"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:background="@color/textboxColor"
            android:autofillHints=""/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/Indent1"
            android:textStyle="bold"
            android:text="@string/total_use_assets"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dollar"/>
        <TextView
            android:id="@+id/total_use_assets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </TableRow>
</TableLayout>