<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cash_table"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:layout_marginBottom="10dp">
    <TableRow
        android:background="@color/rowColor"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:textStyle="bold"
            android:text="@string/cash_and_cash_equivalents"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/rowColor"
        android:layout_marginVertical="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/Indent1"
            android:text="@string/checking_accounts"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dollar" />
        <EditText
            android:id="@+id/checking_accounts"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:background="@color/textboxColor"
            android:autofillHints=""/>
    </TableRow>
    <TableRow
        android:background="@color/rowColor"
        android:layout_marginVertical="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/Indent1"
            android:text="@string/savings_accounts"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dollar" />
        <EditText
            android:id="@+id/savings_accounts"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:background="@color/textboxColor"
            android:autofillHints=""/>
    </TableRow>
    <TableRow
        android:background="@color/rowColor"
        android:layout_marginVertical="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/Indent1"
            android:text="@string/money_market_accounts"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dollar" />
        <EditText
            android:id="@+id/money_market_accounts"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:background="@color/textboxColor"
            android:autofillHints=""/>
    </TableRow>
    <TableRow
        android:background="@color/rowColor"
        android:layout_marginVertical="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/Indent1"
            android:text="@string/savings_bonds"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dollar" />
        <EditText
            android:id="@+id/savings_bonds"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:background="@color/textboxColor"
            android:autofillHints=""/>
    </TableRow>
    <TableRow
        android:background="@color/rowColor"
        android:layout_marginVertical="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/Indent1"
            android:text="@string/cd"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dollar" />
        <EditText
            android:id="@+id/cds"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:background="@color/textboxColor"
            android:autofillHints=""/>
    </TableRow>
    <TableRow
        android:background="@color/rowColor"
        android:layout_marginVertical="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/Indent1"
            android:text="@string/cash_value_of_life_insurance"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dollar" />
        <EditText
            android:id="@+id/cash_value_of_life_insurance"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:background="@color/textboxColor"
            android:autofillHints=""/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/Indent1"
            android:textStyle="bold"
            android:text="@string/total_cash"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dollar"/>
        <TextView
            android:id="@+id/total_cash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </TableRow>
</TableLayout>